--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://KseniaRI.github.io/goit-js-hw-11",
+  "homepage": "https://KseniaRI.github.io/goit-js-hw-11-infinite-scroll",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-11-infinite-scroll/"
   },
   "repository": {
     "type": "git",
